--- a/sketches/coordinates/README
+++ b/sketches/coordinates/README
@@ -1,1 +1,3 @@
 # README
+
+![Alt text](https://github.com/ddachille23/art-and-code/blob/faac80768ef4768dc850b10a50aae02b12aec887/sketches/coordinates/dan-landscape.png)
